// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Form component <HandlingMessage /> rendering should render empty correctly with no handling message 1`] = `
<div
  className="col-12"
>
  <Heading
    as="h2"
    styleAs="h3"
  />
  <div>
    We gaan zo snel mogelijk aan de slag.
  </div>
</div>
`;

exports[`Form component <HandlingMessage /> rendering should render handling message correctly 1`] = `
<div
  className="col-12"
>
  <Heading
    as="h2"
    styleAs="h3"
  />
  <div
    key="undefined-1"
  >
    Jaaaaa!
  </div>
  <div
    key="undefined-2"
  >
    Neee!
  </div>
</div>
`;

exports[`Form component <HandlingMessage /> rendering should render no handling message when not visible 1`] = `""`;
